@@ -357,10 +357,18 @@
 		</dependency>-->
 
 		<!-- NiceAPI -->
-		<dependency>
+		<!--<dependency>
 			<groupId>nice.check</groupId>
 			<artifactId>addition</artifactId>
 			<version>1.1.0</version>
+		</dependency>-->
+
+		<dependency>
+			<groupId>nice.check</groupId>
+			<artifactId>nice.check</artifactId>
+			<version>1.0.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/addition-1.1.0.jar</systemPath>
 		</dependency>
 
     </dependencies>
@@ -398,10 +406,11 @@
 			<!--추가-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.0</version>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<finalName>addition</finalName>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 				</configuration>
 			</plugin>
 
